# om1-doctor

./: .gitignore  README.md  pyproject.toml  report.md
src/om1_doctor/: cli.py  report.py
src/om1_doctor/checks/: signatures.py
tests/: test_report.py  test_signatures.py
