[project]
name = "om1-doctor"
version = "0.1.0"
description = "Diagnostics + report tool for OM1 node runners"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "psutil>=5.9",
]

[project.scripts]
om1-doctor = "om1_doctor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
